--- a/panels-dev/.eslintrc
+++ b/panels-dev/.eslintrc
@@ -1,4 +1,3 @@
-
 {
   "extends": [
     "eslint:recommended",
@@ -10,7 +9,9 @@
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "rules": {
     "no-unexpected-multiline": "off",
     "@typescript-eslint/indent": "off",
