--- a/panels-js/package.json
+++ b/panels-js/package.json
@@ -10,5 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "lit": "*"
+  },
+  "devDependencies": {
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "2.2.1"
   }
 }
