--- a/panels-js/package.json
+++ b/panels-js/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "start": "npx web-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Riccardo Brero",
@@ -12,6 +13,10 @@
     "lit": "*"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@web/dev-server": "^0.1.17",
+    "@web/dev-server-esbuild": "^0.2.12",
+    "@web/rollup-plugin-html": "^1.6.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "2.2.1"
