--- a/panels-js/package.json
+++ b/panels-js/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "npx web-dev-server",
+    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Riccardo Brero",
@@ -13,10 +14,10 @@
     "lit": "*"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^11.2.1",
     "@web/dev-server": "^0.1.17",
     "@web/dev-server-esbuild": "^0.2.12",
     "@web/rollup-plugin-html": "^1.6.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "2.2.1"
