--- a/panels-dev/.prettierrc
+++ b/panels-dev/.prettierrc
@@ -1,11 +1,9 @@
 {
+  "semi": true,
   "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
-  "semi": true,
   "singleQuote": true,
   "trailingComma": "none",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "fluid": false
+  "bracketSpacing": true
 }
